--- a/index.html
+++ b/index.html
@@ -19,41 +19,41 @@
         <section class="nuestras__opciones">
         <h2>Que te provoca hoy?</h2>
         <div>
-            <h3 class="opciones">Food 1</h3>
+            <h3 class="opciones">Avocado Brusqueta con tomates confitados</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab necessitatibus dolor laborum, doloremque aspernatur mollitia soluta vel! In, repellat illum culpa blanditiis architecto officiis autem, quia repellendus ad praesentium odit!</p>
             <img src="./img/1.jpg" alt="">
             <p class="opciones__precio">precio: $1200</p>
 
         </div>
         <div>
-            <h3 class="opciones">Food 2</h3>
+            <h3 class="opciones">Las triplets toasts </h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab necessitatibus dolor laborum, doloremque aspernatur mollitia soluta vel! In, repellat illum culpa blanditiis architecto officiis autem, quia repellendus ad praesentium odit!</p>
             <img src="./img/2.jpg" alt="">
             <p class="opciones__precio">precio: $1200</p>
 
         </div>
         <div>
-            <h3 class="opciones">Food 3</h3>
+            <h3 class="opciones">Pizza de ahuyama</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab necessitatibus dolor laborum, doloremque aspernatur mollitia soluta vel! In, repellat illum culpa blanditiis architecto officiis autem, quia repellendus ad praesentium odit!</p>
             <img src="./img/3.jpg" alt="">
             <p class="opciones__precio">precio: $1200</p>
 
         </div>
         <div>
-            <h3 class="opciones">Food 4</h3>
+            <h3 class="opciones">The queen Burguer </h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab necessitatibus dolor laborum, doloremque aspernatur mollitia soluta vel! In, repellat illum culpa blanditiis architecto officiis autem, quia repellendus ad praesentium odit!</p>
             <img src="./img/4.jpg" alt="">
             <p class="opciones__precio">precio: $1200</p>
         </div>
         <div>
-            <h3 class="opciones">Food 5</h3>
+            <h3 class="opciones">Tacos to share</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab necessitatibus dolor laborum, doloremque aspernatur mollitia soluta vel! In, repellat illum culpa blanditiis architecto officiis autem, quia repellendus ad praesentium odit!</p>
             <img src="./img/5.jpg" alt="">
             <p class="opciones__precio">precio: $1200</p>
 
         </div>
         <div>
-            <h3 class="opciones">Food 6</h3>
+            <h3 class="opciones">Brunch for the team </h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab necessitatibus dolor laborum, doloremque aspernatur mollitia soluta vel! In, repellat illum culpa blanditiis architecto officiis autem, quia repellendus ad praesentium odit!</p>
             <img src="./img/6.jpg" alt="">
             <p class="opciones__precio">precio: $1200</p>
