Commit with DOM

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda Online</title>
+    <link rel="shortcut icon" href="./img/FrameVeganlogo.jpg" type="image/x-icon">
+    <title>VamosVegan</title>
     <link rel="stylesheet" href="./css/index.css">
 
 
@@ -12,6 +13,7 @@
 </head>
 <body>
     <header>
+        <img id="logo" src="./img/FrameVeganlogo.jpg" alt="logo de VamosVegan">
         <h1>Vamos Vegan</h1>
         <p> Call 5615106363</p>
     </header>
@@ -59,21 +61,32 @@
             <p class="opciones__precio">precio: $1650</p>
 
         </div>
+       </section>
+
+        <section>
+            <h2 id="title">Te gusto lo que comiste hoy? Nos dejas un comentario?</h2>
+            <input type="text" placeholder="Comentario" id="Review">
+            <button type = "submit" id = "addComentario" > Agregar </button>
+            <ul id="oursReviews"> </ul>
+            <li>Bruch for the team is a most have on Sundays</li>
+            <li> muy delicioso. Gracias Vamos Vegan"); </li>
+
         </section>
   
 
     </main>
       
-    <!--FOOTER DE LA PAGINA -->
-    <footer>
-        <h2> Consigueme en   </h2><br>
-        <p><a href="https://outlook.live.com/mail/0/"><span class="iconify" data-icon="ic:outline-mark-email-read"></span></a></p>
-        <p><a href="https://www.whatsapp.com/"><span class="iconify" data-icon="simple-icons:whatsapp"></span></a></p>
-        <p><a href="https://www.facebook.com/"><span class="iconify" data-icon="eva:facebook-outline"></span></a></p>
-        <br>
-    </footer>
-<script src= "./js/script.js"></script>
+<script src="./js/scriptDOM.js"></script>
+<script src= "./js/script3.js"></script>
+<script src = "./js/script.js"></script>
 <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
-
+ <!--FOOTER DE LA PAGINA -->
+ <footer>
+    <h2> Consigueme en   </h2><br>
+    <p><a href="https://outlook.live.com/mail/0/"><span class="iconify" data-icon="ic:outline-mark-email-read"></span></a></p>
+    <p><a href="https://www.whatsapp.com/"><span class="iconify" data-icon="simple-icons:whatsapp"></span></a></p>
+    <p><a href="https://www.facebook.com/"><span class="iconify" data-icon="eva:facebook-outline"></span></a></p>
+    <br>
+</footer>
 </body>
 </html>
