--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./img/FrameVeganlogo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/FrameVeganlogo (1).svg" type="image/x-icon">
     <title>VamosVegan</title>
     <link rel="stylesheet" href="./css/index.css">
 
@@ -13,9 +13,8 @@
 </head>
 <body>
     <header>
-        <img id="logo" src="./img/FrameVeganlogo.jpg" alt="logo de VamosVegan">
-        <h1>Vamos Vegan</h1>
-        <p> Call 5615106363</p>
+        <img id="logo" src="./img/FrameVeganlogo (1).svg" alt="logo de VamosVegan">
+        <h1 class="misTitulos">Vamos Vegan comida vegana cerca de ti </h1>
     </header>
     <main>
         <section class="nuestras__opciones">
@@ -62,14 +61,17 @@
 
         </div>
        </section>
+       <section>
+            <h2> Listo Para Ordenar? </h2>
+
+       </section>
 
         <section>
             <h2 id="title">Te gusto lo que comiste hoy? Nos dejas un comentario?</h2>
             <input type="text" placeholder="Comentario" id="Review">
             <button type = "submit" id = "addComentario" > Agregar </button>
-            <ul id="oursReviews"> </ul>
-            <li>Bruch for the team is a most have on Sundays</li>
-            <li> muy delicioso. Gracias Vamos Vegan"); </li>
+            <ul id="oursReviews"></ul>
+
 
         </section>
   
